Workaround for TCK Extensions on Java 11
Previously there were put into ext dir. This feature is no longer present
in Java 11. While we can put it on top classloader, they also refer to
javax APIs that are also no longer present in Java 11.

Therefore they're OSGified, and put into modules directory so they
can function properly; there are put on system classpath so that
extension loaders can locate them (but use the osgi version),
and still keps in EXT classpath, because there is no alternative for
appclient yet. Therefore appclient needs to run on Java 8.

--- a/ts.override.properties
+++ b/ts.override.properties
@@ -45,6 +45,8 @@ vi.jvm.options.remove=-Xmx512m:${vi.jvm.options}
 # set UTC also for RI
 ri.jvm.options=-Doracle.jdbc.J2EE13Compliant=true:-Xmx4096m:-Dj2eelogin.name=${user}:-Dj2eelogin.password=${password}:-Deislogin.name=${user1}:-Deislogin.password=${password1}:-Dtest.ejb.stateful.timeout.wait.seconds=${test.ejb.stateful.timeout.wait.seconds}:-DwebServerPort.2=${webServerPort.2}:-DwebServerHost.2=${webServerHost.2}:-Dcsiv2.save.log.file=${harness.log.traceflag}:-Djavax.xml.accessExternalStylesheet=all:-Djavax.xml.accessExternalDTD=file,http:-Duser.timezone=UTC
 
+# in jdk11, we need these TCK libs OSGified in modules, but also on system classpath
+s1as.classpathsuffix=${javaee.home}/modules/cts.jar${pathsep}${javaee.home}/modules/tsharness.jar
 
 # Common Annotations need to be put on bootclasspath
 command.testExecuteAppClient= \
